k8s/ingress/dns-frontend.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-frontend-ingress
  namespace: story-stream
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "music-demo.ru"
    external-dns.alpha.kubernetes.io/ttl: "1200"
spec:
  rules:
    - host: music-demo.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
